--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 
 /* interior pages styles */
 #page1 .front {
-  font-size:5px;
+  font-size:10px;
   letter-spacing:2vh;
   line-height:50vh;
   font-weight:900;
@@ -165,7 +165,7 @@ body {
 
 
 #page2 .back {
-  font-size:1vh;
+  font-size:5px;
   color:white;
   background:#222;
   animation:a 3s linear infinite;
@@ -188,7 +188,7 @@ body {
 }
 
 #page3 .back {
-   font-size:5px;
+  font-size:5px;
   color:white;
   background:#222;
   animation:a 3s linear infinite;
@@ -242,12 +242,12 @@ body {
 
 #page5 .back {
   font-size:5px;
-  letter-spacing:2vh;
+  letter-spacing:1vh;
   line-height:50vh;
   font-weight:900;
   text-align:left;
   background:radial-gradient(circle at 30% 50%, black 50%, #222 40%);
   color:magenta;
   padding-left:2vh;
-  animation:cover 10s linear infinite;
+  animation:cover 10s linear infinite
 }
